docs/1.33/discovery/v1/endpoint.md
---
permalink: /1.33/discovery/v1/endpoint/
---

# discovery.v1.endpoint

"Endpoint represents a single logical \"backend\" implementing a service."

## Index

* [`fn withAddresses(addresses)`](#fn-withaddresses)
* [`fn withAddressesMixin(addresses)`](#fn-withaddressesmixin)
* [`fn withDeprecatedTopology(deprecatedTopology)`](#fn-withdeprecatedtopology)
* [`fn withDeprecatedTopologyMixin(deprecatedTopology)`](#fn-withdeprecatedtopologymixin)
* [`fn withHostname(hostname)`](#fn-withhostname)
* [`fn withNodeName(nodeName)`](#fn-withnodename)
* [`fn withZone(zone)`](#fn-withzone)
* [`obj conditions`](#obj-conditions)
  * [`fn withReady(ready)`](#fn-conditionswithready)
  * [`fn withServing(serving)`](#fn-conditionswithserving)
  * [`fn withTerminating(terminating)`](#fn-conditionswithterminating)
* [`obj hints`](#obj-hints)
  * [`fn withForNodes(forNodes)`](#fn-hintswithfornodes)
  * [`fn withForNodesMixin(forNodes)`](#fn-hintswithfornodesmixin)
  * [`fn withForZones(forZones)`](#fn-hintswithforzones)
  * [`fn withForZonesMixin(forZones)`](#fn-hintswithforzonesmixin)
* [`obj targetRef`](#obj-targetref)
  * [`fn withApiVersion(apiVersion)`](#fn-targetrefwithapiversion)
  * [`fn withFieldPath(fieldPath)`](#fn-targetrefwithfieldpath)
  * [`fn withKind(kind)`](#fn-targetrefwithkind)
  * [`fn withName(name)`](#fn-targetrefwithname)
  * [`fn withNamespace(namespace)`](#fn-targetrefwithnamespace)
  * [`fn withResourceVersion(resourceVersion)`](#fn-targetrefwithresourceversion)
  * [`fn withUid(uid)`](#fn-targetrefwithuid)

## Fields

### fn withAddresses

```ts
withAddresses(addresses)
```

"addresses of this endpoint. For EndpointSlices of addressType \"IPv4\" or \"IPv6\", the values are IP addresses in canonical form. The syntax and semantics of other addressType values are not defined. This must contain at least one address but no more than 100. EndpointSlices generated by the EndpointSlice controller will always have exactly 1 address. No semantics are defined for additional addresses beyond the first, and kube-proxy does not look at them."

### fn withAddressesMixin

```ts
withAddressesMixin(addresses)
```

"addresses of this endpoint. For EndpointSlices of addressType \"IPv4\" or \"IPv6\", the values are IP addresses in canonical form. The syntax and semantics of other addressType values are not defined. This must contain at least one address but no more than 100. EndpointSlices generated by the EndpointSlice controller will always have exactly 1 address. No semantics are defined for additional addresses beyond the first, and kube-proxy does not look at them."

**Note:** This function appends passed data to existing values

### fn withDeprecatedTopology

```ts
withDeprecatedTopology(deprecatedTopology)
```

"deprecatedTopology contains topology information part of the v1beta1 API. This field is deprecated, and will be removed when the v1beta1 API is removed (no sooner than kubernetes v1.24).  While this field can hold values, it is not writable through the v1 API, and any attempts to write to it will be silently ignored. Topology information can be found in the zone and nodeName fields instead."

### fn withDeprecatedTopologyMixin

```ts
withDeprecatedTopologyMixin(deprecatedTopology)
```

"deprecatedTopology contains topology information part of the v1beta1 API. This field is deprecated, and will be removed when the v1beta1 API is removed (no sooner than kubernetes v1.24).  While this field can hold values, it is not writable through the v1 API, and any attempts to write to it will be silently ignored. Topology information can be found in the zone and nodeName fields instead."

**Note:** This function appends passed data to existing values

### fn withHostname

```ts
withHostname(hostname)
```

"hostname of this endpoint. This field may be used by consumers of endpoints to distinguish endpoints from each other (e.g. in DNS names). Multiple endpoints which use the same hostname should be considered fungible (e.g. multiple A values in DNS). Must be lowercase and pass DNS Label (RFC 1123) validation."

### fn withNodeName

```ts
withNodeName(nodeName)
```

"nodeName represents the name of the Node hosting this endpoint. This can be used to determine endpoints local to a Node."

### fn withZone

```ts
withZone(zone)
```

"zone is the name of the Zone this endpoint exists in."

## obj conditions

"EndpointConditions represents the current condition of an endpoint."

### fn conditions.withReady

```ts
withReady(ready)
```

"ready indicates that this endpoint is ready to receive traffic, according to whatever system is managing the endpoint. A nil value should be interpreted as \"true\". In general, an endpoint should be marked ready if it is serving and not terminating, though this can be overridden in some cases, such as when the associated Service has set the publishNotReadyAddresses flag."

### fn conditions.withServing

```ts
withServing(serving)
```

"serving indicates that this endpoint is able to receive traffic, according to whatever system is managing the endpoint. For endpoints backed by pods, the EndpointSlice controller will mark the endpoint as serving if the pod's Ready condition is True. A nil value should be interpreted as \"true\"."

### fn conditions.withTerminating

```ts
withTerminating(terminating)
```

"terminating indicates that this endpoint is terminating. A nil value should be interpreted as \"false\"."

## obj hints

"EndpointHints provides hints describing how an endpoint should be consumed."

### fn hints.withForNodes

```ts
withForNodes(forNodes)
```

"forNodes indicates the node(s) this endpoint should be consumed by when using topology aware routing. May contain a maximum of 8 entries. This is an Alpha feature and is only used when the PreferSameTrafficDistribution feature gate is enabled."

### fn hints.withForNodesMixin

```ts
withForNodesMixin(forNodes)
```

"forNodes indicates the node(s) this endpoint should be consumed by when using topology aware routing. May contain a maximum of 8 entries. This is an Alpha feature and is only used when the PreferSameTrafficDistribution feature gate is enabled."

**Note:** This function appends passed data to existing values

### fn hints.withForZones

```ts
withForZones(forZones)
```

"forZones indicates the zone(s) this endpoint should be consumed by when using topology aware routing. May contain a maximum of 8 entries."

### fn hints.withForZonesMixin

```ts
withForZonesMixin(forZones)
```

"forZones indicates the zone(s) this endpoint should be consumed by when using topology aware routing. May contain a maximum of 8 entries."

**Note:** This function appends passed data to existing values

## obj targetRef

"ObjectReference contains enough information to let you inspect or modify the referred object."

### fn targetRef.withApiVersion

```ts
withApiVersion(apiVersion)
```

"API version of the referent."

### fn targetRef.withFieldPath

```ts
withFieldPath(fieldPath)
```

"If referring to a piece of an object instead of an entire object, this string should contain a valid JSON/Go field access statement, such as desiredState.manifest.containers[2]. For example, if the object reference is to a container within a pod, this would take on a value like: \"spec.containers{name}\" (where \"name\" refers to the name of the container that triggered the event) or if no container name is specified \"spec.containers[2]\" (container with index 2 in this pod). This syntax is chosen only to have some well-defined way of referencing a part of an object."

### fn targetRef.withKind

```ts
withKind(kind)
```

"Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds"

### fn targetRef.withName

```ts
withName(name)
```

"Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"

### fn targetRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/"

### fn targetRef.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"Specific resourceVersion to which this reference is made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn targetRef.withUid

```ts
withUid(uid)
```

"UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids"